--- a/сss/styles.css
+++ b/сss/styles.css
@@ -27,6 +27,7 @@ body {
 
 .list {
   margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -34,10 +35,42 @@ body {
   text-decoration: none;
 }
 
+/* Секции */
+
+.section-title {
+  padding: 0;
+  margin: 0px 0px 50px 0px;
+  color: var(--title-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+}
+
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  outline: 2px solid tomato;
+}
+
 /*  Шапка */
 
 /* Навигация */
-.logo-web {
+
+.header {
+  display: flex;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.logo-accent {
   color: var(--accent-color);
 
   font-family: Raleway, sans-serif;
@@ -49,13 +82,28 @@ body {
 .logo {
   color: var(--black-color);
 
+  margin-right: 85px;
+
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
 }
 
+.pages-nav {
+  display: flex;
+}
+
+.pages-nav .item + .item {
+  margin-left: 50px;
+}
+
 .pages-nav .link {
+  display: block;
+
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--title-color);
 
   font-weight: 500;
@@ -74,6 +122,17 @@ body {
 }
 
 /* Контакты */
+
+.nav-contacts {
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+}
+
+.nav-contacts .item + .item {
+  margin-left: 50px;
+}
+
 .nav-contacts .contacts {
   color: var(--primary-text-color);
 
@@ -88,30 +147,13 @@ body {
   color: var(--accent-color);
 }
 
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  outline: 2px solid tomato;
-}
 /* Оформелние index.html */
 
-/* Секции */
-
-.section-title {
-  padding: 0;
-  margin: 0px 0px 50px 0px;
-  color: var(--title-color);
-
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+/* Герой */
+.hero {
   text-align: center;
 }
 
-/* Герой */
 .hero .title {
   margin-top: 0;
   margin-bottom: 30px;
@@ -121,7 +163,6 @@ body {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
   text-transform: uppercase;
 }
@@ -138,11 +179,14 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
-  text-align: center;
   letter-spacing: 0.06em;
 }
 
 /* Особенности */
+
+.features-list {
+  display: flex;
+}
 
 .features-list .title {
   margin-top: 0;
@@ -156,6 +200,16 @@ body {
   text-transform: uppercase;
 }
 
+.features-list .item {
+  width: 270px;
+
+  margin-right: 30px;
+}
+
+.features-list .item:last-child {
+  margin-right: 0;
+}
+
 .features-list .text {
   margin-top: 0;
   margin-bottom: 94px;
@@ -166,6 +220,19 @@ body {
 }
 
 /* Чем мы занимаемся */
+
+.directions {
+  display: flex;
+}
+
+.directions .item {
+  margin-right: 30px;
+}
+
+.directions .item:last-child {
+  margin-right: 0;
+}
+
 .direction-title {
   font-weight: 700;
   font-size: 14px;
@@ -175,7 +242,29 @@ body {
 }
 
 /* Наша команда */
+
+.team {
+  display: flex;
+
+  background-color: var(--portfolio-button-color);
+}
+
+.team .item {
+  margin-right: 30px;
+}
+
+.team .item:last-child {
+  margin-right: 0;
+}
+
+.team .img {
+  margin-bottom: 30px;
+}
+
 .team-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+
   color: var(--title-color);
 
   font-weight: 500;
@@ -185,12 +274,25 @@ body {
 }
 
 .team-position {
+  margin-top: 0;
+  margin-bottom: 16px;
+
   font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
 }
 /* Постоянные клиенты */
+
+.clients .list {
+  display: flex;
+
+  padding-bottom: 94px;
+}
+
+.clients .item {
+  margin-right: 30px;
+}
 
 /* Оформление portfolio.html */
 
@@ -244,7 +346,34 @@ body {
   background-color: var(--footer-color);
 }
 
-.contacts .adress {
+.footer-main {
+  display: flex;
+  flex-wrap: wrap;
+}
+/* Лого */
+.logo-contacts {
+  margin-top: 60px;
+  margin-right: 69px;
+}
+
+.footer-logo {
+  display: flex;
+
+  margin-bottom: 20px;
+}
+
+.logo {
+  margin: 0;
+}
+
+/* Контакты */
+
+.contacts-text {
+  margin-top: 0;
+  margin-bottom: 60px;
+}
+
+.contacts-text .adress {
   color: var(--primary-white-color);
 
   font-weight: 400;
@@ -252,8 +381,8 @@ body {
   line-height: 1.71;
 }
 
-.contacts .mail,
-.contacts .phone {
+.contacts-text .mail,
+.contacts-text .phone {
   color: var(--contacts-color);
 
   font-weight: 400;
@@ -261,8 +390,16 @@ body {
   line-height: 1.71;
 }
 
-.footer .social p,
-.subscribe p {
+/* Социальные сети */
+
+.social {
+  margin-top: 72px;
+}
+
+.social .text {
+  margin-top: 0;
+  margin-bottom: 20px;
+
   color: var(--primary-white-color);
 
   font-weight: 700;
@@ -271,11 +408,35 @@ body {
   text-transform: uppercase;
 }
 
-.footer .social a {
-  color: var(--black-color);
+.social .list {
+  display: flex;
 }
 
-/* Button */
+.social .item {
+  margin-right: 10px;
+}
+
+.social .item:last-child {
+  margin-right: 94px;
+}
+
+/* Подписка */
+
+.subscribe {
+  margin-top: 72px;
+}
+.subscribe .text {
+  margin-top: 0;
+  margin-bottom: 20px;
+
+  color: var(--primary-white-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
 .footer-btn {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
