--- a/сss/styles.css
+++ b/сss/styles.css
@@ -55,6 +55,7 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   outline: 2px solid tomato;
+  background-color: aqua;
 }
 
 /*  Шапка */
@@ -297,7 +298,24 @@ body {
 /* Оформление portfolio.html */
 
 .portfolio-list {
-  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.portfolio-list .item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+
+  background-color: brown;
+}
+
+.portfolio-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.portfolio-list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .portfolio-title {
