--- a/сss/styles.css
+++ b/сss/styles.css
@@ -54,8 +54,6 @@ body {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 2px solid tomato;
-  background-color: aqua;
 }
 
 /*  Шапка */
@@ -244,10 +242,12 @@ body {
 
 /* Наша команда */
 
+.our-team {
+  background-color: var(--portfolio-button-color);
+}
+
 .team {
   display: flex;
-
-  background-color: var(--portfolio-button-color);
 }
 
 .team .item {
@@ -283,6 +283,10 @@ body {
   line-height: 1.18;
   text-align: center;
 }
+/* 
+.team .list {
+  display: flex;
+} */
 /* Постоянные клиенты */
 
 .clients .list {
@@ -306,8 +310,6 @@ body {
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
-
-  background-color: brown;
 }
 
 .portfolio-list .item:nth-child(3n) {
@@ -315,7 +317,7 @@ body {
 }
 
 .portfolio-list .item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
+  margin-bottom: 94px;
 }
 
 .portfolio-title {
