--- a/сss/styles.css
+++ b/сss/styles.css
@@ -35,6 +35,18 @@ body {
   text-decoration: none;
 }
 
+.visually-hiden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  /* IE6, IE7 */
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
 /* Секции */
 
 .section-title {
@@ -52,8 +64,10 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 1200px;
+  padding-top: 94px;
   padding-left: 15px;
   padding-right: 15px;
+  outline: 2px solid black;
 }
 
 /*  Шапка */
@@ -62,6 +76,8 @@ body {
 
 .header {
   display: flex;
+
+  padding-top: 0;
 }
 
 .header-nav {
@@ -306,6 +322,10 @@ body {
   flex-wrap: wrap;
 }
 
+.portfolio .title {
+  margin: 0;
+}
+
 .portfolio-list .item {
   width: 370px;
   margin-right: 30px;
@@ -320,6 +340,10 @@ body {
   margin-bottom: 94px;
 }
 
+.portfolio-list .img {
+  margin-bottom: 20px;
+}
+
 .portfolio-title {
   margin-top: 0;
   margin-bottom: 4px;
@@ -331,7 +355,6 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
 }
-
 .portfolio-text {
   margin: 0;
 
@@ -394,10 +417,11 @@ body {
 .footer-main {
   display: flex;
   flex-wrap: wrap;
+  padding-top: 0;
 }
 /* Лого */
 .logo-contacts {
-  margin-top: 60px;
+  padding-top: 60px;
   margin-right: 69px;
 }
 
@@ -434,7 +458,7 @@ body {
 /* Социальные сети */
 
 .social {
-  margin-top: 72px;
+  padding-top: 72px;
 }
 
 .social .text {
@@ -464,7 +488,7 @@ body {
 /* Подписка */
 
 .subscribe {
-  margin-top: 72px;
+  padding-top: 72px;
 }
 .subscribe .text {
   margin-top: 0;
