--- a/сss/styles.css
+++ b/сss/styles.css
@@ -65,6 +65,7 @@ body {
   margin-right: auto;
   width: 1200px;
   padding-top: 94px;
+  padding-bottom: 94px;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -198,6 +199,10 @@ body {
 
 /* Особенности */
 
+.features {
+  padding-bottom: 0;
+}
+
 .features-list {
   display: flex;
 }
@@ -215,8 +220,6 @@ body {
 }
 
 .features-list .item {
-  width: 270px;
-
   margin-right: 30px;
 }
 
@@ -226,7 +229,6 @@ body {
 
 .features-list .text {
   margin-top: 0;
-  margin-bottom: 94px;
 
   font-weight: 400;
   font-size: 14px;
@@ -306,8 +308,6 @@ body {
 
 .clients .list {
   display: flex;
-
-  padding-bottom: 94px;
 }
 
 .clients .item {
