--- a/сss/styles.css
+++ b/сss/styles.css
@@ -106,6 +106,17 @@ body {
   line-height: 1.19;
 }
 
+.logo-white {
+  color: var(--primary-white-color);
+
+  margin-right: 85px;
+
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+}
+
 .pages-nav {
   display: flex;
 }
